Fix z-index of header

--- a/src/assets/styles/components/_navigation.scss
+++ b/src/assets/styles/components/_navigation.scss
@@ -12,6 +12,7 @@
   top: 0;
   user-select: none;
   width: 100%;
+  z-index: 1000;
 
   &.header-scrolled {
     background-color: rgba(255, 255, 255, 0.8);
